--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.16.3",
     "nuxt": "^3.2.3",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0"
