--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass-loader": "^13.2.0"
   },
   "dependencies": {
-    "nuxt-icon": "^0.3.2"
+    "nuxt-icon": "^0.3.2",
+    "parallax-js": "^3.1.0"
   }
 }
