--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "nuxt-icon": "^0.3.2",
-    "parallax-js": "^3.1.0"
+    "parallax-js": "^3.1.0",
+    "vuex": "^4.0.2"
   }
 }
