--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "fabric": "^5.3.0",
     "nuxt-icon": "^0.5.0",
+    "potrace": "^2.1.8",
     "stylus": "^0.62.0",
     "vuex": "^4.0.2"
   }
